added table for initial view debugging

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,43 @@
-<ul>
-  <% @lists.each do |list| %>
-    <li>
-      <%= list["name"] %>
-    </li>
-  <% end %>
-</ul>
+<div class="page-header">
+  <h1>Penguin Gear Lists <small>Create, share, hike</small></h1>
+</div>
+
+<div class="panel panel-default" >
+  <div class="panel-heading">List Name Here</div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Section</th>
+        <th>Category</th>
+        <th>Name</th>
+        <th>Quantity</th>
+        <th>Weight (gms)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+        <td></td>
+        <th> subtotal:</th>
+        <td></td>
+        <th></th>            
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <th></th>
+        <td></td>
+        <th></th>     
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td></td>
+        <td></td>
+        <th>Total Weight:</th>
+        <td></td>
+        <th></th>
+      </tr>
+    </tfoot>
+  </table>
+</div>
