--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,10 @@
 </div>
 
 <div class="panel panel-default" >
-  <div class="panel-heading">List Name Here</div>
+  <div class="panel-heading"><%= @list["name"] %></div>
+  <div class="panel-body">
+    <%# @list3["description"] %>
+  </div>
   <table class="table">
     <thead>
       <tr>
@@ -14,21 +17,27 @@
         <th>Weight (gms)</th>
       </tr>
     </thead>
-    <tbody>
+    <% @sections.each do |section| %>
+      <% section["list_items"].each do |item| %>
+        <tr>
+          <td><%= item["section"] %></td>
+          <td><%= item["category"] %></td>
+          <td><%= item["name"] %></td>
+          <td><%= item["quantity"] %></td>
+          <td><%= item["weight"] %></td>     
+        </tr>
+      <% end %>
       <tr>
         <td></td>
         <td></td>
-        <th> subtotal:</th>
+        <th><%= section["name"].capitalize %> subtotal:</th>
         <td></td>
         <th></th>            
       </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <th></th>
-        <td></td>
-        <th></th>     
-      </tr>
+    <% end %>
+    <tbody>
+
+      
     </tbody>
     <tfoot>
       <tr>
