uncommented list[description] in table

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 <div class="panel panel-default" >
   <div class="panel-heading"><%= @list["name"] %></div>
   <div class="panel-body">
-    <%# @list3["description"] %>
+    <%= @list["description"] %>
   </div>
   <table class="table">
     <thead>
