moved list markup to _list partial

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,51 +2,4 @@
   <h1>Penguin Gear Lists <small>Create, share, hike</small></h1>
 </div>
 
-<div class="panel panel-default" >
-  <div class="panel-heading"><%= @list["name"] %></div>
-  <div class="panel-body">
-    <%= @list["description"] %>
-  </div>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Section</th>
-        <th>Category</th>
-        <th>Name</th>
-        <th>Quantity</th>
-        <th>Weight (gms)</th>
-      </tr>
-    </thead>
-    <% @sections.each do |section| %>
-      <% section["list_items"].each do |item| %>
-        <tr>
-          <td><%= item["section"] %></td>
-          <td><%= item["category"] %></td>
-          <td><%= item["name"] %></td>
-          <td><%= item["quantity"] %></td>
-          <td><%= item["weight"] %></td>     
-        </tr>
-      <% end %>
-      <tr>
-        <td></td>
-        <td></td>
-        <th><%= section["name"].capitalize %> subtotal:</th>
-        <td></td>
-        <th></th>            
-      </tr>
-    <% end %>
-    <tbody>
-
-      
-    </tbody>
-    <tfoot>
-      <tr>
-        <td></td>
-        <td></td>
-        <th>Total Weight:</th>
-        <td></td>
-        <th></th>
-      </tr>
-    </tfoot>
-  </table>
-</div>
+<%= render "shared/list" %>
