added functionality to render collection of lists

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,4 @@
   <h1>Penguin Gear Lists <small>Create, share, hike</small></h1>
 </div>
 
-<%= render "shared/list" %>
+<%= render partial: "shared/list", collection: @lists %>
