--- a/app/views/shared/_list.html.erb
+++ b/app/views/shared/_list.html.erb
@@ -1,7 +1,7 @@
 <div class="panel panel-default" >
-  <div class="panel-heading"><%= @list[:name] %></div>
+  <div class="panel-heading"><%= list[:name] %></div>
   <div class="panel-body">
-    <%= @list[:description] %>
+    <%= list[:description] %>
   </div>
   <table class="table">
     <thead>
@@ -13,7 +13,7 @@
         <th>Weight (gms)</th>
       </tr>
     </thead>
-    <% @list[:sections].each do |section| %>
+    <% list[:sections].each do |section| %>
       <% section[:items].each do |item| %>
         <tr>
           <td><%= section["name"] %></td>
@@ -37,7 +37,7 @@
         <td></td>
         <th>Total Weight:</th>
         <td></td>
-        <th><%= @list[:total_weight] %></th>
+        <th><%= list[:total_weight] %></th>
       </tr>
     </tfoot>
   </table>
