--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div class="container-fluid">
+      <%= render 'layouts/header' %>
+      
       <%= yield %>
     </div>
   </body>
