made app name a link to the root_path

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,6 @@
 <div class="page-header">
-  <h1>Penguin Gear Lists <small>Create, share, hike</small></h1>
+  <h1>
+    <%= link_to "Penguin Gear Lists", root_path %> 
+    <small>Create, share, hike</small>
+  </h1>
 </div>
