--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,12 @@
   <body>
     <div class="container-fluid">
       <%= render 'layouts/header' %>
-      
-      <%= yield %>
+      <div class="col-md-9">
+        <%= yield %>
+      </div>
+      <div class="col-md-3">
+        <%= yield :sidebar %>
+      </div>
     </div>
   </body>
 </html>
