--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,5 @@
-<%= render partial: "shared/list", collection: @lists %>
+<% content_for :sidebar do %>
+  <%= render partial: 'shared/user_lists' %>
+<% end %>
+
+<%= render partial: 'shared/list', collection: @lists %>
