--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,1 +1,5 @@
+<% content_for :sidebar do %>
+  <%= render partial: 'shared/user_lists' %>
+<% end %>
+
 <%= render partial: 'shared/list', locals: { list: @list } %>
