--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
 <% content_for :sidebar do %>
+  <%= link_to "Create Gear List", new_list_path, class: 'btn btn-default' %>
   <%= render partial: 'shared/user_lists' %>
 <% end %>
 
 <%= render partial: 'shared/list', collection: @lists %>
+
