--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,4 +1,5 @@
 <% content_for :sidebar do %>
+  <%= link_to "Create Gear List", new_list_path, class: 'btn btn-default' %>
   <%= render partial: 'shared/user_lists' %>
 <% end %>
 
