--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,7 +4,7 @@
 
 <h3>Create a Gear List</h3>
 
-<%= form_tag({ controller: 'home', action: 'create_list'}, method: 'post', role: 'form', class: 'form') do %>
+<%= form_tag({ controller: 'lists', action: 'create'}, method: 'post', role: 'form', class: 'form') do %>
   <div class="form-group">
     <%= label_tag(:name, 'List Name:') %>
     <%= text_field_tag(:name, class: 'form-control') %>
