--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -14,5 +14,7 @@
     <%= f.text_area :description, class: 'form-control' %>
   </div>
 
+    <%= hidden_field_tag :user_id, @user_id %>
+
     <%= f.submit 'Create Gear List', class: 'btn btn-default' %>
 <% end %>
