--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,3 +4,5 @@
 <% end %>
 
 <%= render partial: 'shared/list', locals: { list: @list } %>
+
+<%= link_to 'Add Items', list_items_path(@list), class: 'btn btn-default' %>
