--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -9,7 +9,7 @@
     <%= f.label :name, 'List Name:' %>
     <%= f.text_field :name, class: 'form-control' %>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.label :description, 'Description:' %>
     <%= f.text_area :description, class: 'form-control' %>
   </div>
