--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -5,4 +5,4 @@
 
 <%= render partial: 'shared/list', locals: { list: @list } %>
 
-<%= link_to 'Add Items', list_items_path(params[:id]), class: 'btn btn-default' %>
+<%= link_to 'Add Items', new_list_item_path(params[:id]), class: 'btn btn-default' %>
