added hidden_field for list_id

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -27,5 +27,7 @@
     <%= f.number_field :weight, min: 0, class: 'form-control' %>
   </div>
 
+  <%= f.hidden_field :list_id, value: @list_id %>
+
   <%= f.submit 'Add Item', class: 'btn btn-default' %>
 <% end %>
