added user_id to header for debugging

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,4 +3,6 @@
     <%= link_to "Penguin Gear Lists", root_path %> 
     <small>Create, share, hike</small>
   </h1>
+
+  <p>Current User Id: <%= session[:user_id] %> </p>
 </div>
