--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,4 +5,5 @@
   </h1>
 
   <p>Current User Id: <%= session[:user_id] %> </p>
+  <%= link_to "Log out", "/logout", method: 'delete', class: "btn btn-default" %>  
 </div>
