--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,5 +5,28 @@
   </h1>
 
   <p>Current User Id: <%= session[:user_id] %> </p>
-  <%= link_to "Log out", "/logout", method: 'delete', class: "btn btn-default" %>  
+  <%= link_to "Log out", "/logout", method: 'delete', class: "btn btn-default", onclick: "signOut();" %>  
+  <!-- <a href="#" onclick="signOut();">Sign out</a> -->
+
+  <script>
+    function signOut() {
+      var auth2 = gapi.auth2.getAuthInstance();
+      auth2.signOut().then(function () {
+        console.log('User signed out.');
+        auth2.disconnect();
+        signOutSessions();
+      });
+    };
+
+    function signOutSessions() {
+      var url = '/logout';
+      $.ajax({
+        url: url,
+        type: 'DELETE',
+        success: function(data, textStatus, jqHXR) {
+          window.location.replace("/login");
+        }
+      });
+    };
+  </script>
 </div>
