--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -13,6 +13,13 @@
     <%= f.label :description, 'Description:' %>
     <%= f.text_area :description, class: 'form-control' %>
   </div>
+  <div class="form-group">
+    <%= f.radio_button :secret, false %>
+    <%= f.label :secret_false, 'Share' %>
+
+    <%= f.radio_button :secret, true %>
+    <%= f.label :secret_true, 'Keep private' %>
+  </div>
 
   <%= f.hidden_field :user_id, value: @user_id %>
 
