added personalized submit text to form

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -17,5 +17,5 @@
 
   <%= f.hidden_field :user_id, value: @user_id %>
 
-  <%= f.submit 'Create Gear List', class: 'btn btn-default' %>
+  <%= f.submit @submit_text, class: 'btn btn-default' %>
 <% end %>
