--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,3 +1,7 @@
+<% content_for :sidebar do %>
+  <%= render partial: 'shared/user_lists' %>
+<% end %>
+
 <h3>Edit your Gear List</h3>
 
 <%= render 'form' %>
