--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @list, url: { action: "create" }, role: 'form', class: 'form' do |f| %>
+<%= form_for @list, url: url, method: method_name, role: 'form', class: 'form' do |f| %>
   <div class="form-group">
     <%= f.label :name, 'List Name:' %>
     <%= f.text_field :name, class: 'form-control' %>
@@ -16,6 +16,7 @@
   </div>
 
   <%= f.hidden_field :user_id, value: @user_id %>
+  <%= f.hidden_field :id, value: params[:id] %>
 
   <%= f.submit @submit_text, class: 'btn btn-default' %>
 <% end %>
