--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -4,4 +4,4 @@
 
 <h3>Edit your Gear List</h3>
 
-<%= render 'form' %>
+<%= render partial: 'form', locals: { method_name: 'put', url: list_path(params[:id]) } %>
