--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,4 +4,4 @@
 
 <h3>Create a Gear List</h3>
 
-<%= render 'form' %>
+<%= render partial: 'form', locals: { method_name: 'post', url: lists_path } %>
