--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <div class="container-fluid">
       <%= render 'layouts/header' %>
       <div class="col-md-9">
+        <%= render partial: 'shared/flash_messages' %>
         <%= yield %>
       </div>
       <div class="col-md-3">
