--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -8,7 +8,7 @@
     <%= f.text_area :description, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= f.radio_button :secret, false %>
+    <%= f.radio_button :secret, false, checked: true %>
     <%= f.label :secret_false, 'Share' %>
 
     <%= f.radio_button :secret, true %>
