extracted form into partial

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -5,29 +5,8 @@
 
 <h1>Add a Piece of Gear</h1>
 
-<%= form_for @item, url: { action: "create" }, role: 'form', class: 'form' do |f| %>
-  <div class="form-group">
-    <%= f.label :section, 'Section:' %>
-    <%= f.text_field :section, placeholder: "packing, shelter \& sleeping, or kitchen...", class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :category, 'Category:' %>
-    <%= f.text_field :category, placeholder: "backpack, sleeping bag, or knife...", class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :name, 'Item:' %>
-    <%= f.text_field :name, placeholder: "eg. ULA Circuit pack, small w/ s-shaped straps", class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :quantity, 'Quantity:' %>
-    <%= f.number_field :quantity, min: 0, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :weight, 'Weight (in gms):' %>
-    <%= f.number_field :weight, min: 0, class: 'form-control' %>
-  </div>
-
-  <%# f.hidden_field :list_id, value: @list_id %>
-
-  <%= f.submit 'Add Item', class: 'btn btn-default' %>
-<% end %>
+<%= render partial: 'form', locals: {
+                              url: list_items_path(params[:list_id]),
+                              method: 'post',
+                              submit_text: 'Add Item'
+                            } %>
