--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,4 +4,8 @@
 
 <h3>Create a Gear List</h3>
 
-<%= render partial: 'form', locals: { method_name: 'post', url: lists_path } %>
+<%= render partial: 'form', locals: { 
+                              method: 'post', 
+                              url: lists_path, 
+                              submit_text: 'Create Gear List' 
+                            } %>
