--- a/app/views/shared/_right_pencil.html.erb
+++ b/app/views/shared/_right_pencil.html.erb
@@ -1,5 +1,5 @@
 <span class='pull-right'>
-  <a href="/lists/<%= params[:id] %>/edit">
+  <a href="<%= url %>">
     <i class="fa fa-pencil"></i>
   </a>
 </span>
