--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,14 @@
   </head>
   <body>
     <div class="container-fluid">
+      <%= render 'layouts/navbar' %>
       <%= render 'layouts/header' %>
-      <div class="col-md-9">
+      <div class='col-md-2'></div>
+      <div class="col-md-8">
         <%= render partial: 'shared/flash_messages' %>
         <%= yield %>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-2">
         <%= yield :sidebar %>
       </div>
     </div>
