added initial styling to body element

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,9 @@
 a {
   color: black;
 }
+
+body {
+  background-image: url('IMG_0683_hitchcock_lake.jpg');
+  background-size: 100%;
+  background-color: gray;
+}
