--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
-<div class="page-header">
+<div class='page-header'>
   <h1>
-    <%= link_to "Penguin Gear Lists", root_path %> 
+    <%= link_to 'Penguin Gear Lists', root_path %> 
     <small>Create, share, hike</small>
 
     <% if session[:user_id] %>
       <span class='pull-right'>
-        <%= link_to "Log out", "/logout", method: 'delete', class: "btn btn-default", onclick: "signOut();" %>  
+        <%= link_to 'Log out', '/logout', method: 'delete', class: 'btn btn-default', onclick: 'signOut();' %>  
       </span>
     <% end %>
   </h1>
