--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,17 +5,17 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
   </head>
   <body>
-    <div class="container-fluid">
-      <%= render 'layouts/header' %>
+    <%= render 'layouts/header' %>
+    <div class='container-fluid'>
       <div class='col-md-2'></div>
-      <div class="col-md-8">
+      <div class='col-md-8' id='feed'>
         <%= render partial: 'shared/flash_messages' %>
         <%= yield %>
       </div>
-      <div class="col-md-2">
+      <div class='col-md-2'>
         <%= yield :sidebar %>
       </div>
     </div>
