--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,11 @@ body {
   background-size: 100%;
   background-color: gray;
 }
+
+#feed {
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.page-header {
+  background-color: rgba(255, 255, 255, 0.7);
+}
