added classes to feed, lists, and sidebar; added basic styling to each

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <%= render partial: 'shared/flash_messages' %>
         <%= yield %>
       </div>
-      <div class='col-md-2'>
+      <div class='col-md-2' id='sidebar'>
         <%= yield :sidebar %>
       </div>
     </div>
