--- a/app/views/shared/_list.html.erb
+++ b/app/views/shared/_list.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default" >
+<div class="panel panel-default gear-list" >
   <div class="panel-heading">
     <%= list[:name] %>
     <% if list[:secret] %>
