--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,12 +25,21 @@ body {
   background-image: url('IMG_0683_hitchcock_lake.jpg');
   background-size: 100%;
   background-color: gray;
+  background-attachment: fixed;
 }
 
 #feed {
   background-color: rgba(255, 255, 255, 0.7);
 }
 
+#sidebar {
+  background-color: rgba(255, 255, 255, 0.95);
+}
+
 .page-header {
   background-color: rgba(255, 255, 255, 0.7);
+}
+
+div.gear-list {
+  margin: 30px;
 }
