--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,11 @@ body {
   background-color: rgba(255, 255, 255, 0.95);
 }
 
+#login-panel {
+  width: 300px;
+  height: 400px
+}
+
 .page-header {
   background-color: rgba(255, 255, 255, 0.7);
 }
