--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
 
     <% if session[:user_id] %>
       <span class='pull-right'>
+        <!-- <p>HYOH, <%#= session[:user_name] %>.</p> -->
         <%= link_to 'Log out', '/logout', method: 'delete', class: 'btn btn-default', onclick: 'signOut();' %>  
       </span>
     <% end %>
