made header a navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,8 @@ a {
 }
 
 body {
+  padding-top: 200px;
+
   background-image: url('IMG_0683_hitchcock_lake.jpg');
   background-size: 100%;
   background-color: gray;
