--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,15 @@
-<div class='page-header'>
-  <h1>
-    <%= link_to 'Penguin Gear Lists', root_path %> 
-    <small>Create, share, hike</small>
+<div class='navbar navbar-default navbar-fixed-top'>
+  <div class='container'>
+    <h1>
+      <%= link_to 'Penguin Gear Lists', root_path %> 
+      <small>Create, share, hike</small>
 
-    <% if session[:user_id] %>
-      <span class='pull-right'>
-        <!-- <p>HYOH, <%#= session[:user_name] %>.</p> -->
-        <%= link_to 'Log out', '/logout', method: 'delete', class: 'btn btn-default', onclick: 'signOut();' %>  
-      </span>
-    <% end %>
-  </h1>
+    </h1>
+      <% if session[:user_id] %>
+        <span class='pull-right'>
+          <p>HYOH, <%= session[:user_name] %>.</p>
+          <%= link_to 'Log out', '/logout', method: 'delete', class: 'btn btn-default', onclick: 'signOut();' %>  
+        </span>
+      <% end %>
+  </div>
 </div>
