--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,19 @@
-<div class='navbar navbar-default navbar-fixed-top'>
-  <div class='container'>
-    <h1>
+<div class='navbar navbar-default navbar-fixed-top' role='navigation'>
+  <div class='container-fluid'>
+    <h1 class='nav navbar-nav navbar-left'>
       <%= link_to 'Penguin Gear Lists', root_path %> 
       <small>Create, share, hike</small>
-
     </h1>
-      <% if session[:user_id] %>
-        <span class='pull-right'>
-          <p>HYOH, <%= session[:user_name] %>.</p>
-          <%= link_to 'Log out', '/logout', method: 'delete', class: 'btn btn-default', onclick: 'signOut();' %>  
-        </span>
-      <% end %>
+
+    <% if session[:user_id] %>
+      <ul class='nav navbar-nav navbar-right'>
+        <li>
+          <p class='navbar-text'>HYOH, <%= session[:user_name] %>.</p>
+        </li>
+        <li>
+          <%= link_to 'Log out', '/logout', method: 'delete', class: 'btn btn-default navbar-btn', onclick: 'signOut();' %>
+        </li>
+      </ul>
+    <% end %>
   </div>
 </div>
