--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,3 +1,9 @@
-<%= link_to "Create Gear List", new_list_path, class: 'btn btn-default' %>
+<%= yield :sidebar %>
 
-<% render partial: 'shared/user_lists' %>
+
+
+
+
+<%#= link_to "Create Gear List", new_list_path, class: 'btn btn-default' %>
+
+<%# render partial: 'shared/user_lists' %>
