--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,6 @@ a {
 }
 
 body {
-  // padding-top: 200px;
   padding: 12rem 2rem 0 2rem;
 
   background-image: url('IMG_0683_hitchcock_lake.jpg');
@@ -34,14 +33,16 @@ body {
 }
 
 #feed {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.6);
+  // width: 75%;
 }
 
 #sidebar {
-  background-color: rgba(255, 255, 255, 1);
-  padding: 2rem;
+  background-color: rgba(210,238,255, 0.9);
+  padding: 3rem;
   position: fixed;
-  // width: 100%;
+  height: 100%;
+  border-color: white;
   right: 0;
 }
 
@@ -54,10 +55,11 @@ body {
   background-color: rgba(255, 255, 255, 1);
   padding: 2rem;
   height: 12rem;
+  border-color: white;
 }
 
 div.gear-list {
-  margin: 30px;
+  margin: 3rem auto;
 }
 
 h1 {
