moved 'add list' button to below user_lists

--- a/app/views/shared/_user_lists.html.erb
+++ b/app/views/shared/_user_lists.html.erb
@@ -10,3 +10,11 @@
     </a>
   <% end %>
 </div>
+<div class='list-group'>
+  <a href='/lists/new' class='list-group-item'>
+    Create 
+    <span class='pull-right'>
+      <i class="fa fa-plus"></i>
+    </span>
+  </a>
+</div>
