--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,10 @@ a {
   color: black;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 body {
   padding: 12rem 2rem 0 2rem;
 
@@ -34,7 +38,6 @@ body {
 #feed {
   background-color: rgba(255, 255, 255, 0.6);
   padding: 3rem;
-  // width: 75%;
 }
 
 #sidebar {
@@ -56,6 +59,15 @@ body {
   padding: 2rem;
   height: 12rem;
   border-color: white;
+}
+
+.btn.add-items {
+  width: 20rem;
+  margin: 0 auto;
+}
+
+div.add-items {
+  margin: 0 auto;
 }
 
 div.gear-list {
