--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,6 +52,7 @@ body {
 #login-panel {
   margin-top: 24rem;
   width: 36rem;
+  padding: 3rem 0;
 }
 
 #gSignInWrapper {
@@ -63,7 +64,7 @@ body {
 #login-btn-label {
   font-family: 'Open Sans', sans-serif;
   text-align: center;
-  margin-bottom: 2rem;
+  // margin-bottom: 2rem;
 }
 
 // .label { 
