--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,7 +64,7 @@ body {
 #login-btn-label {
   font-family: 'Open Sans', sans-serif;
   text-align: center;
-  // margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 // .label { 
