--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,26 +50,22 @@ body {
 }
 
 #login-panel {
-  margin-top: 24rem;
-  width: 36rem;
-  padding: 3rem 0;
-}
-
-#gSignInWrapper {
-  width: 190px;
-  height: 62px;
-  margin: 50px auto;
+  margin-top: 24rem; // from the top of the page
+  width: 36rem; // width of panel
+  padding: 3rem 0; // inside the panel
+  position: relative;
 }
 
 #login-btn-label {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
-// .label { 
-//   color: black;
-// }
+#login-btn-wrapper {
+  width: 190px;
+  margin: 0 auto;
+}
 
 .navbar {
   background-color: rgba(255, 255, 255, 1);
