--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,11 @@
     <%= render 'layouts/header' %>
     <div class='container-fluid'>
       <div class='row'>
-        <div class='col-md-2'></div>
-        <div class='col-md-8' id='feed'>
+        <div class='col-md-8 col-md-offset-1' id='feed'>
           <%= render partial: 'shared/flash_messages' %>
           <%= yield %>
         </div>
-        <div class='col-md-2' id='sidebar'>
+        <div class='col-md-2 col-md-offset-1' id='sidebar'>
           <%= render partial: 'layouts/sidebar' %>
         </div>
       </div>
