changed background-size on body

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ body {
   padding: 12rem 2rem 0 2rem;
 
   background-image: url('IMG_0683_hitchcock_lake.jpg');
-  background-size: 100%;
+  background-size: cover;
   background-color: rgba(210,238,255, 1);
   background-attachment: fixed;
   font-family: 'Open Sans', sans-serif;
