working on header styling; WIP

--- a/app/views/shared/_list.html.erb
+++ b/app/views/shared/_list.html.erb
@@ -17,7 +17,7 @@
     <% end %>
   </div>
   <div class='table-responsive'>
-    <table class='table'>
+    <table class='table list-table'>
       <thead>
         <tr>
           <th>Section</th>
