updated background-image syntax

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,7 @@ a:hover {
 body {
   padding: 12rem 2rem 0 2rem;
 
-  background-image: url('IMG_0683_hitchcock_lake.jpg');
+  background-image: url(image-path('IMG_0683_hitchcock_lake.jpg'));
   background-size: cover;
   background-color: rgba(210,238,255, 1);
   background-attachment: fixed;
