--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,12 @@
     <%= render 'layouts/header' %>
     <div class='container-fluid'>
       <div class='row'>
-        <div class='col-md-8 col-md-offset-1' id='feed'>
+        <div class='col-md-2' id='sidebar'>
+          <%= render partial: 'layouts/sidebar' %>
+        </div>
+        <div class='col-md-8 col-md-offset-3' id='feed'>
           <%= render partial: 'shared/flash_messages' %>
           <%= yield %>
-        </div>
-        <div class='col-md-2 col-md-offset-1' id='sidebar'>
-          <%= render partial: 'layouts/sidebar' %>
         </div>
       </div>
     </div>
