--- a/app/views/shared/_list.html.erb
+++ b/app/views/shared/_list.html.erb
@@ -1,4 +1,4 @@
-<div class='panel panel-default gear-list' >
+<div class='panel panel-default gearlist-panel' >
   <div class='panel-heading'>
     <% if show? %>
       <%= list[:name] %>
@@ -67,8 +67,10 @@
           <th>Total Weight:</th>
           <td></td>
           <th><%= list[:total_weight] %></th>
-          <th></th>
-          <th></th>
+          <% if show? %>
+            <th></th>
+            <th></th>
+          <% end %>
         </tr>
       </tfoot>
     </table>
