--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,6 +67,10 @@ body {
   margin: 0 auto;
 }
 
+#user-greeting {
+  padding: 15px 0;
+}
+
 .navbar {
   background-color: rgba(255, 255, 255, 1);
   padding: 2rem;
