--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
-<div class='navbar navbar-default navbar-fixed-top' role='navigation'>
+<nav class='navbar navbar-default navbar-fixed-top'>
+<div class='container-fluid'>
   <h1 class='nav navbar-nav navbar-left'>
     <%= link_to 'Penguin Gear Lists', root_path %> 
     <small>Create, share, hike</small>
@@ -7,11 +8,9 @@
   <% if session[:user_id] %>
     <ul class='nav navbar-nav navbar-right'>
       <li>
-        <span class='navbar-text'>HYOH, <%= session[:user_name] %>.</span>
-      </li>
-      <li>
         <%= link_to 'Log out', '/logout', method: 'delete', class: 'btn btn-default navbar-btn', onclick: 'signOut();' %>
       </li>
     </ul>
   <% end %>
 </div>
+</nav>
