--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,7 @@ body {
   background-size: cover;
   background-color: rgba(210,238,255, 1);
   background-attachment: fixed;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 #feed {
