--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,3 +1,3 @@
-<h4><%= session[:user_name] %>'s Lists:</h4>
+<h4 id='sidebar-title'><%= session[:user_name] %>'s Lists:</h4>
 
 <%= render partial: 'shared/user_lists' %>
