--- a/app/views/shared/_right_icon.html.erb
+++ b/app/views/shared/_right_icon.html.erb
@@ -1,5 +1,5 @@
 <span class='pull-right'>
   <a href="<%= url %>">
-    <i class="fa fa-pencil"></i>
+    <i class="fa fa-<%= icon_name %>"></i>
   </a>
 </span>
