--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,3 +1,11 @@
 <h4 id='sidebar-title'><%= session[:user_name] %>'s Lists:</h4>
 
 <%= render partial: 'shared/user_lists' %>
+
+<div id='copyright' class='text-center'>
+  <p>
+    <i class="fa fa-copyright fa-flip-horizontal"></i>
+    <%= link_to'arhx', 'https://github.com/arhx' %>
+    <%= Time.now.year %>
+  </p>
+</div>
