added .text-center to Edit and Remove labels

--- a/app/views/shared/_list.html.erb
+++ b/app/views/shared/_list.html.erb
@@ -28,8 +28,8 @@
           <th>Quantity</th>
           <th>Weight (gms)</th>
           <% if show? %>
-            <th>Edit</th>
-            <th>Remove</th>
+            <th class='text-center'>Edit</th>
+            <th class='text-center'>Remove</th>
           <% end %>
         </tr>
       </thead>
