made delete icons red

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,6 +89,10 @@ body {
   margin: 0 auto;
 }
 
+.fa-times {
+  color: rgb(217,83,79);
+}
+
 div.gearlist-panel {
   margin: 3rem auto;
   width: auto;
