fixed lock icon

--- a/app/views/shared/_user_lists.html.erb
+++ b/app/views/shared/_user_lists.html.erb
@@ -3,7 +3,7 @@
     <a href='/lists/<%= list['id'] %>' class='list-group-item'>
       <%= list['name'] %>
       <% if list['secret'] %>
-        <%= render 'shared/right_lock' %>
+        <i class='fa fa-lock pull-right'></i>
       <% end %>
     </a>
   <% end %>
