--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,1 +1,8 @@
+<%= form_tag(lists_path, method: 'get', class: 'navbar-form', id: 'search-form') do %>
+  <div class='input-append'>
+    <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: 'Search for a list...' %>
+    <button class='btn btn-default' type='submit'><span class='glyphicon glyphicon-search' aria-hidden='true'> Search</span></button>
+  </div>
+<% end %>
+
 <%= render partial: 'shared/list', collection: @lists %>
