--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -8,7 +8,7 @@
 
 <h4>Or search for an item</h4>
 
-<%= form_tag(search_items_path, method: 'get', class: 'form-inline', id: 'item-search-form') do %>
+<%= form_tag(list_search_items_path, method: 'get', class: 'form-inline', id: 'item-search-form') do %>
   <div class='input-append'>
     <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: 'Search for an item...' %>
     <button class='btn btn-default' type='submit'><span class='glyphicon glyphicon-search' aria-hidden='true'> Search</span></button>
