--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -2,8 +2,13 @@
 
 <%= form_tag(new_list_item_path(params[:list_id]), method: :get, class: 'form') do %>
 
+  <% @items.each do |item| %>
+    <%#= label_tag :item_id item['name'] %>
+    <div class='radio'>
+      <%= radio_button_tag :item_id, item['id'] %> <%= item['name'] %>
+    </div>
+  <% end %>
   <%= submit_tag 'Continue with selected item', class: 'btn btn-default' %>
 <% end %>
 
-<!-- cancel button -->
 <%= link_to 'Cancel', new_list_item_path(params[:list_id]), class: 'btn btn-danger' %>
