--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -18,5 +18,5 @@
   <%= f.hidden_field :user_id, value: @user_id %>
   <%= f.hidden_field :id, value: params[:id] %>
 
-  <%= f.submit submit_text, class: 'btn btn-default' %>
+  <%= f.submit submit_text, class: 'btn btn-primary' %>
 <% end %>
