styled submit button

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -22,5 +22,5 @@
 
   <%= f.hidden_field :id %>
 
-  <%= f.submit submit_text, class: 'btn btn-default' %>
+  <%= f.submit submit_text, class: 'btn btn-primary' %>
 <% end %>
