--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,12 +1,14 @@
 <h2>Add a Piece of Gear</h2>
 
+<h4>Enter the details:</h4>
+
 <%= render partial: 'form', locals: {
                               url: list_items_path(params[:list_id]),
                               method: 'post',
                               submit_text: 'Add Item'
                             } %>
 
-<h4>Or search for an item</h4>
+<h4>Or search for an item:</h4>
 
 <%= form_tag(list_search_items_path, method: 'get', class: 'form-inline', id: 'item-search-form') do %>
   <div class='input-append'>
