--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @item, url: url, method: method, role: 'form', class: 'form' do |f| %>
   <div class="form-group">
     <%= f.label :section, 'Section:' %>
-    <%= f.select(:section, @sections, {}, { class: 'form-control' }) %>
+    <%= f.select(:section, @sections, { include_blank: 'pick a section...' }, { class: 'form-control' }) %>
   </div>
   <div class="form-group">
     <%= f.label :category, 'Category:' %>
