--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag(lists_path, method: 'get', class: 'form-inline', id: 'list-search-form') do %>
   <div class='input-append'>
-    <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: 'Search for a list...' %>
-    <button class='btn btn-default' type='submit'><span class='glyphicon glyphicon-search' aria-hidden='true'> Search</span></button>
+    <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: 'eg. solo, JMT, desert...' %>
+    <button class='btn btn-default' type='submit'><span class='glyphicon glyphicon-search' aria-hidden='true'> Search Lists</span></button>
   </div>
 <% end %>
 
