--- a/app/views/shared/_list.html.erb
+++ b/app/views/shared/_list.html.erb
@@ -27,7 +27,7 @@
           <th>Category</th>
           <th>Name</th>
           <th>Quantity</th>
-          <th>Weight (gms)</th>
+          <th>Weight (oz.)</th>
           <% if show? %>
             <th class='text-center'>Edit</th>
             <th class='text-center'>Remove</th>
@@ -41,7 +41,7 @@
             <td><%= item['category'] %></td>
             <td><%= item['name'] %></td>
             <td><%= item['quantity'] %></td>
-            <td><%= item['weight'] %></td>
+            <td><%= gms_to_oz(item['weight']) %></td>
             <% if show? %>
               <td class='text-center'>
                 <%= link_to '/lists/' + list[:id].to_s + '/items/' + item['id'].to_s + '/edit' do %>
